fix overflow content in service area

--- a/themes/repair-cafe/assets/sass/components/_service-area.scss
+++ b/themes/repair-cafe/assets/sass/components/_service-area.scss
@@ -66,6 +66,7 @@
             background-color: $rouge-bright;
             padding-top: $service-area-padding-vertical;
             padding-bottom: $service-area-padding-vertical;
+            overflow: hidden;
         }
     }
 }
